fix player name alignment

--- a/index.css
+++ b/index.css
@@ -80,6 +80,7 @@ main {
 .player-name {
 	background-color: var(--color-main-light);
 	border-radius: 32px;
+	text-align: center;
 	background-color: var(--color-main-dark);
 	padding: 16px 32px;
 	color: var(--color-bg);
